--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,7 @@
 body {
     display: flex;
+    margin: auto;
+    /* width: 80%; */
 }
 
 .side-nav {
@@ -9,6 +11,12 @@ body {
     margin-top: 7em;
     margin-left: 3%;
     width: 20%;
+}
+
+#dashboard-middle {
+    margin: auto;
+    float: center;
+    width: 80%;
 }
 
 #dashboard-right {
