--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,7 +1,9 @@
-body {
+
+#dashboard-body {
     display: flex;
     margin: auto;
     /* width: 80%; */
+
 }
 
 .side-nav {
@@ -13,10 +15,18 @@ body {
     width: 20%;
 }
 
+#content {
+    display: flex;
+}
+
 #dashboard-middle {
     margin: auto;
     float: center;
-    width: 80%;
+    width: 60%;
+}
+
+#dashboard-middle img {
+    width: 50%;
 }
 
 #dashboard-right {
