changing background color

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,52 +1,52 @@
-
 #dashboard-body {
-    /* display: flex; */
-    margin: auto;
-    width: 80%;
-
+  /* display: flex; */
+  margin: auto;
+  width: 80%;
+  background-color: #899d84;
 }
 
 .side-nav {
-    /* display: inline-block; */
-    position: fixed;
-    /* float: left; */
-    margin-top: 7em;
-    margin-left: 2%;
-    width: 20%;
+  /* display: inline-block; */
+  position: fixed;
+  /* float: left; */
+  margin-top: 7em;
+  margin-left: 2%;
+  width: 20%;
+  background-color: rgb(255, 255, 255, 0.8);
 }
 
 #content {
-    flex-direction: row;
-    display: inline-flex;
-    justify-content: center;
-    float: right;
-    width: 80%;
+  flex-direction: row;
+  display: inline-flex;
+  justify-content: center;
+  float: right;
+  width: 80%;
 }
 
 #dashboard-middle {
-    margin: auto;
-    float: center;
-    width: 50%;
+  margin: auto;
+  float: center;
+  width: 50%;
 }
 
 #dashboard-middle img {
-    width: 60%;
+  width: 60%;
 }
 
 #dashboard-right {
-    margin-right: 10%;
-    width: 20%;
-    float: right;
+  margin-right: 10%;
+  width: 20%;
+  float: right;
 }
 
 .side-nav ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .side-nav ul li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.card{
-    background-color: rgb(255, 255, 255, 0.8);
+.card {
+  background-color: rgb(255, 255, 255, 0.8);
 }
