--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,8 +1,12 @@
+body{
+    background-color: #899d84;
+}
+
 #dashboard-body {
   /* display: flex; */
   margin: auto;
   width: 80%;
-  background-color: #899d84;
+  
 }
 
 .side-nav {
