--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,8 +5,7 @@ body{
 #dashboard-body {
   /* display: flex; */
   margin: auto;
-  width: 80%;
-  
+  width: 100%;
 }
 
 .side-nav {
@@ -25,6 +24,7 @@ body{
   justify-content: center;
   float: right;
   width: 80%;
+  margin:auto;
 }
 
 #dashboard-middle {
@@ -53,4 +53,6 @@ body{
 
 .card {
   background-color: rgb(255, 255, 255, 0.8);
+  padding: 24px;
+  border-radius: 8px;
 }
