--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -12,8 +12,9 @@ body{
   /* display: inline-block; */
   position: fixed;
   /* float: left; */
-  margin-top: 7em;
-  margin-left: 2%;
+  height: 100%;
+  padding-top: 7em;
+  padding-left: 2%;
   width: 20%;
   background-color: rgb(255, 255, 255, 0.8);
 }
@@ -25,11 +26,14 @@ body{
   float: right;
   width: 80%;
   margin:auto;
+  margin-top: 5%;
 }
 
 #dashboard-middle {
-  margin: auto;
-  float: center;
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-top: 5%; */
+  /* float: center; */
   width: 50%;
 }
 
@@ -38,8 +42,8 @@ body{
 }
 
 #dashboard-right {
-  margin-right: 10%;
-  width: 20%;
+  margin-right: 5%;
+  width: 25%;
   float: right;
 }
 
