--- a/css/user.css
+++ b/css/user.css
@@ -1,5 +1,56 @@
 /* CSS for webpages with a user view */
 
-html {
-    background-color: #899D84
+body{
+    background-color: #899d84;
+}
+
+#dashboard-body {
+  /* display: flex; */
+  margin: auto;
+  width: 100%;
+}
+
+.side-nav {
+  /* display: inline-block; */
+  position: fixed;
+  /* float: left; */
+  height: 100%;
+  padding-top: 7em;
+  padding-left: 2%;
+  width: 20%;
+  background-color: rgb(255, 255, 255, 0.8);
+}
+
+#content {
+  flex-direction: row;
+  display: inline-flex;
+  justify-content: center;
+  float: right;
+  width: 80%;
+  margin:auto;
+  margin-top: 5%;
+}
+
+#dashboard-middle {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#dashboard-middle img {
+  width: 60%;
+}
+
+#dashboard-right {
+  margin-right: 5%;
+  width: 25%;
+  float: right;
+}
+
+.side-nav ul {
+  list-style-type: none;
+}
+
+.side-nav ul li a {
+  text-decoration: none;
 }
