--- a/css/user.css
+++ b/css/user.css
@@ -4,7 +4,7 @@ body{
     background-color: #899d84;
 }
 
-#dashboard-body {
+.content-body {
   /* display: flex; */
   margin: auto;
   width: 100%;
@@ -21,7 +21,7 @@ body{
   background-color: rgb(255, 255, 255, 0.8);
 }
 
-#content {
+.content {
   flex-direction: row;
   display: inline-flex;
   justify-content: center;
@@ -31,7 +31,7 @@ body{
   margin-top: 5%;
 }
 
-#dashboard-middle {
+#dashboard-middle, #profile-settings {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
@@ -53,4 +53,26 @@ body{
 
 .side-nav ul li a {
   text-decoration: none;
+}
+
+#profile-settings {
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+#profile-settings > * {
+  background-color: rgba(191, 191, 191, 0.8);
+  padding: 40px;
+  border-radius: 20%;
+  margin-bottom: 20px;
+}
+
+.profile-info {
+  margin-right: 5%;
+  width: 40%;
+  float: right;
+  background-color: rgb(255, 255, 255, 0.8);
+  padding: 40px;
+  border-radius: 20%;
 }
