--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -56,9 +56,21 @@ body{
   width: 24px;
 }
 
+#leaderboard ul{
+  list-style: none;
+}
+
 .card {
   background-color: rgb(255, 255, 255, 0.8);
   padding: 24px;
   border-radius: 8px;
   margin: 12px 0px;
+}
+
+#donut-balance-container{
+  text-align: center;
+}
+
+#total-donations{
+  text-align: center;
 }
