--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -65,6 +65,7 @@ body{
   padding: 24px;
   border-radius: 8px;
   margin: 12px 0px;
+  box-shadow: 0px 0px 40px -10px rgba(86, 108, 81, 0.9);
 }
 
 #donut-balance-container{
