--- a/css/user.css
+++ b/css/user.css
@@ -59,9 +59,9 @@ width: 30%;
 }
 
 #profile-settings > * {
-background-color: rgba(191, 191, 191, 0.8);
+background-color: rgb(255, 255, 255, 0.8);
 padding: 40px;
-border-radius: 100px;
+border-radius: 50px;
 margin-bottom: 20px;
 }
 
@@ -71,7 +71,7 @@ width: 40%;
 float: right;
 background-color: rgb(255, 255, 255, 0.8);
 padding: 40px;
-border-radius: 100px;
+border-radius: 50px;
 }
 
 .profile-card h4, p {
@@ -80,5 +80,16 @@ border-radius: 100px;
 }
 
 .profile h4 {
-  margin-bottom: 16px
+  margin-bottom: 20px
+}
+
+.profile-info > * {
+  padding: 10px;
+  background-color: #98b191;
+  border-radius: 30px;
+  margin-bottom: 20px;
+}
+
+.profile-double-field {
+  display:inline-flex;
 }
