--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -69,7 +69,8 @@ body{
 }
 
 #donut-balance-container{
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
