--- a/css/user.css
+++ b/css/user.css
@@ -27,6 +27,28 @@ background-color: rgb(255, 255, 255, 0.8);
 box-shadow: 0px 0px 60px 10px rgba(86, 108, 81, 0.9);
 }
 
+.side-nav ul {
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.side-nav ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  margin: 20px;
+  padding: 20px;
+  background-color: #6B8465;
+  border-radius: 10px;
+}
+
+.side-nav ul li a {
+  text-decoration: none;
+  color: black;
+}
+
 .content {
 flex-direction: row;
 display: inline-flex;
@@ -114,9 +136,10 @@ border-radius: 20%;
   width: 50px;
 }
 
+/* Profile CSS */
+
 .profile-card h4, p {
   margin: 0;
-  /* margin-bottom: 20px; */
 }
 
 .profile h4 {
