--- a/css/user.css
+++ b/css/user.css
@@ -124,7 +124,7 @@ border-radius: 20%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  margin-left: 15%;
+  margin-left: 20%;
 }
 
 .charity-cards-wrapper {
@@ -137,19 +137,28 @@ border-radius: 20%;
   border-radius: 30px;
   margin: 20px;
   width: 350px;
-  height: 350px;
+  height: 400px;
 
   box-shadow: 0px 0px 40px -10px rgba(86, 108, 81, 0.9);
 }
 
 
-
 .card-img img {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   width: 350px;
 }
 
 .card-content {
-  padding: 35px;
+  padding: 5px 20px 20px 20px;
+}
+
+.card-content .body2 {
+  padding-top: 10px;
+}
+
+.card-content .card-btns {
+  padding-top: 15px;
 }
 
 /* Rewards CSS */
