--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -18,23 +18,56 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 3rem 1rem 3rem 1rem;
+  margin-bottom: 3rem;
 }
 
+
 #donut-balance-and-icon{
-  margin:auto;
+  margin-bottom: 1rem;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+#donut-balance-and-icon img{
+  margin-right: 1rem;
 }
 
 #total-donations{
   text-align: center;
+  padding: 3rem 1rem 3rem 1rem;
+  margin-bottom: 3rem;
 }
 
 #donut-balance-and-icon{
   display: flex;
   justify-content: space-between;
+}
+
+#leaderboard{
+  padding: 3rem 1rem 3rem 1rem;
+  margin-bottom: 3rem;
+}
+
+#total-donations h3{
+  margin-bottom: 1rem;
+}
+
+#leaderboard h4{
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .leaderboard_num{
   display: flex;
   justify-content: space-between;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
+
+ul{
+  padding: 1rem;
+}
+
 
